--- a/index.html
+++ b/index.html
@@ -147,47 +147,47 @@
         </section>
         </section>
         
-        <section class="section-meals">
-            <ul class="meals-showcase clearfix">
+        <section class="section-places">
+            <ul class="places-showcase clearfix">
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago1.jpg" alt="Korean bibimbapÂ with egg and vegetables">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago2.jpg" alt="Simple italian pizza with cherry tomatoes">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago3.jpg" alt="Chicken breast steak with vegetables">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago4.jpg" alt="Autumn pumpkin soup">
                     </figure>
                 </li>
             </ul>
-            <ul class="meals-showcase clearfix">
+            <ul class="places-showcase clearfix">
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago5.jpg" alt="Paleo beef steak with vegetables">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago6.jpg" alt="Healthy baguette with egg and vegetables">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago7.jpg" alt="Burger with cheddar and bacon">
                     </figure>
                 </li>
                 <li>
-                    <figure class="meal-photo">
+                    <figure class="places-photo">
                         <img src="resources/img/lago8.jpg" alt="Granola with cherries and strawberries">
                     </figure>
                 </li>
